--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,8 @@
             <artifactId>pagehelper</artifactId>
             <version>5.1.2</version>
         </dependency>
+
+        <!--spring-security框架-->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
