--- a/pom.xml
+++ b/pom.xml
@@ -215,9 +215,18 @@
                         <includes>
                             <include>**/*.xml</include>
                         </includes>
+                        <filtering>true</filtering>
+                    </resource>
+
+                    <!-- 编译之后包含xml和properties -->
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <includes>
+                            <include>**/*</include>
+                        </includes>
+                        <filtering>true</filtering>
                     </resource>
                 </resources>
     </build>
-
 
 </project>
