--- a/heima_ssm_web/src/main/webapp/WEB-INF/web.xml
+++ b/heima_ssm_web/src/main/webapp/WEB-INF/web.xml
@@ -41,6 +41,10 @@
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+    <!--配置request对象来获取访问的IP-->
+    <listener>
+        <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+    </listener>
     <!--配置加载类路径的配置文件-->
     <context-param>
         <param-name>contextConfigLocation</param-name>
@@ -64,6 +68,11 @@
         <servlet-name>dispatcherServlet</servlet-name>
         <url-pattern>*.do</url-pattern>
     </servlet-mapping>
+    <!--配置403权限不足错误页面-->
+    <error-page>
+        <error-code>403</error-code>
+        <location>/403.jsp</location>
+    </error-page>
 
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
